Added an updated date and byline
Changed date and byline to current date and attribution. Added a break between the two.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 	<h1> Dhrumil's Simple Website </h1>
-	<h4> 10/25/2059 by: Somebody </h4>
+	<p> <b>Published on: </b> January 3, 2024 <be>
+	<b> Written by: </b>Programming and Data for Policymakers, Section B, Spring 2024 👾</p>	
 
 	<p> Hello, and welcome to Dhrumil's GitHub lesson. If you haven't already, please
 	<ul>
