updated conclusion paragraph language

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 	<!-- Insert picture of a purple carrot below this line -->
 
-	<p> In conclusion, gym socks aren't vegetables, carrots used to be purple and you now know the average length of a potato. But you don't know not the distribution of potato lengths or how the length differs by potato type. I hope you can now identify whether or not what you're eating is a vegetable.</p>
+	<p> In conclusion, vegetables can come in all sorts of colors, shapes and sizes. Our table above gives you an example of several of these, but there are many more. There are many more types of vegetables in many different colors and shapes. It can be fun to explore new varieties of vegetables and keep eating healthy! I hope this has been an interesting read and you have found something intersting during your time here.</p>
 
 	<p> If you're reading this, you've reached the end of the article and probably lost a few brain cells. Now we, a group of professional newspeople, are going to work on improving it. Kind of like a reverse mad-libs. </p>
 
