--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</ul>
 	</p>
 
-	<p> This is a pretend article about vegetables. Specifically how long they are and what color they are. There are lots of vegetables in the world and they are of various collllors. They can be white, blue or yellow; but there are no neon vegetables in nature. That is why this article is so important to inform you about types of vegggetables. Once you're done reading, you should be able to identify whether or not what you're eating is a vegetable. </p>
+	<p> This is definitely a real article about vegetables - specifically their length and color. There are many vegetables around the world, available in a wide variety of colors. They can be white, blue, yellow, etc. This article will inform you about some types of vegetables that exist. Once you're done reading, you might be able to recognize them. </p>
 
 
 	<!-- This is a placeholder for the table of vegetables.-->
