--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1> Dhrumil's Simple Website </h1>
-	<p> <b>Published on: </b> January 3, 2024 <be>
+	<p> <b>Published on: </b> January 3, 2024 <br>
 	<b> Written by: </b>Programming and Data for Policymakers, Section B, Spring 2024 👾</p>	
 
 	<p> Hello, and welcome to Dhrumil's GitHub lesson. If you haven't already, please
